# re-knowledge-graph

./: .gitignore  Architecture_Paper1.md  requirements.txt
backend/: __init__.py  pyproject.toml
backend/app/: main.py
backend/app/adapters/llm/: __init__.py  base.py  factory.py  glm_client.py  qwen_client.py
backend/app/api/v1/routes/: system.py  workflow.py
backend/app/core/: config.py
backend/app/domain/: models.py
backend/app/pipeline/: e2e_pipeline.py
backend/app/repositories/: graph_repository.py  mysql_repository.py
backend/app/services/: agentic_re_service.py  baseline_re_service.py  cleaning_service.py  graph_service.py  ingestion_service.py  reasoning_service.py
backend/app/v2_pipeline/: __init__.py  filters.py  injectors.py  parallel_engine.py
backend/app/v3_temporal_pipeline/: __init__.py  parallel_engine.py
backend/app/v4_hypergraph_pipeline/: __init__.py  parallel_engine.py
backend/scripts/: download_dataset.py  mock_docred.py
backend/tests/: TESTING_GUIDE.md  __init__.py  ablation_suite.example.yaml  run_ablation_experiments.py  run_ablation_smoke_batch.py  run_ablation_suite.py  run_docred_evaluation.py  run_final_pipeline.py  run_glm_batch.yaml  run_pipeline_test.py  run_qwen_batch.yaml  test_glm.py  test_qwen.py  test_support.py
docs/: architecture.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/constants/: mock_temporal_graph.ts
frontend/src/hooks/: useTimelineController.ts
frontend/src/lib/: temporal-graph.ts
(+7 files in other folders)
